--- a/ConsumeWebAPI/EnergyAustralia/Views/CarShow/GetCarShows.cshtml
+++ b/ConsumeWebAPI/EnergyAustralia/Views/CarShow/GetCarShows.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Car Show";
 }
-<h5 class="text-danger">Note: Please refresh if no data is displayed. Make sure you are connected to internet</h5>
+<h5 class="text-danger">Note: if no data is displayed. Make sure you are connected to internet. Restart the app</h5>
 <div>
     <ul>
         @foreach (var item in Model)
